komunat/src/app/content/content.page.scss
.container
{
    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
    height: calc(var(--vh, 1vh) * 100);
    margin-top:5vh;
}

ion-col {
  margin-left:10px;
  margin-top:10px;
}

.buttonSection {
  height: 65vh;
  width: auto;
}

  .upper {
    height:50%;
    margin-top: 5px;
    position: relative;
    text-align: center;
  }
  
  .lower {
    height: 50%;
    position: relative;
    text-align: center;
  }
  
  .beautify {
    padding-top:10px;
    padding-bottom:10px;
    border-top: 1px solid;
    border-bottom: 2px solid;
    position: absolute;
    text-align: center;
    margin:0px;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
  }
  
  h2 {
    color: #4C4D4F;
    font-size: 8vw;
    text-align: center; 
  }

  h4 {
    height: 5vh;
    font-size: 6vw;
    margin: 1em;
    color: #4C4D4F;
    text-align: center; 
  }
  
  .valueImage {
    height: 50%;
    margin:0px;
  }

  h2 {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: bold;
    font-size: 5vw;
  }
  
  p {
    font-family: 'Source Sans Pro', sans-serif;
    color:#59BCED;
    margin-bottom: 0px;
  }

  .top {
    margin-top:30px;
  }

  .middle {
    top: 50%;
    transform: translate(0, -50%);
  }
  // PROGRESS DOTS
.progressContainer {
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translate(-50%, -30%);
}

.steps {
  position: relative;
  display: flex;
  justify-content: space-between;
  width: 25vw;
}
.step {
  width: 15px;
  height: 15px;
  background: white;
  border: 2px solid var(--komunat-blue);
  border-radius: 50%;
  transition: background 1s;
}
.step.selected {
  background: var(--komunat-blue);
}
.step.completed {
  background: white;
}

.progress {
  position: absolute;
  width: 100%;
  height: 50%;
  border-bottom: 2px solid  var(--komunat-blue);
  z-index: -1;
}
.percent {
  position: absolute;
  width: 0;
  height: 100%;
  border-bottom: 2px solid #4B81BD;
  z-index: 1;
  transition: width 1s;
}

